--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,40 +1,40 @@
 modLoader="javafml"
-loaderVersion="[43,)"
-license="MIT"
+loaderVersion="${loader_version_range}"
+license="${mod_license}"
+issueTrackerURL="${mod_issue_tracker_url}"
 
 [[mods]]
-modId="moreredxcctcompat"
-version="${file.jarVersion}"
-displayName="More Red x CC:Tweaked Compat"
-authors="YuRaNnNzZZ"
-description='''
-Adds support for More Red colored and bundled cables to CC:Tweaked computers
-'''
+modId="${mod_id}"
+version="${minecraft_version}-${mod_version}"
+displayName="${mod_name}"
+displayURL="${mod_display_url}"
+authors="${mod_authors}"
+description='''${mod_description}'''
 
-[[dependencies.moreredxcctcompat]]
+[[dependencies.${mod_id}]]
     modId="forge"
     mandatory=true
-    versionRange="[43,)"
+    versionRange="${forge_version_range}"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.moreredxcctcompat]]
+[[dependencies.${mod_id}]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.19.2,1.20)"
+    versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.moreredxcctcompat]]
+[[dependencies.${mod_id}]]
     modId="computercraft"
     mandatory=true
-    versionRange="[1.101.2,)"
+    versionRange="${cctweaked_version_range}"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.moreredxcctcompat]]
+[[dependencies.${mod_id}]]
     modId="morered"
     mandatory=true
-    versionRange="[3.0.0.0,)"
+    versionRange="${morered_version_range}"
     ordering="NONE"
     side="BOTH"
